fixed filldiv spacing

--- a/hooks/idf-custom.css
+++ b/hooks/idf-custom.css
@@ -73,7 +73,7 @@ iframe {
 .filldiv {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     overflow: hidden
 }
 .filldiv img {
